# qt_canvas

./: .gitignore  README.md  __init__.py  canvas.py  file_tree.py  icons.py  pyproject.toml  registry.py  theme.py  viewer_stack.py
examples/: __init__.py  demo.py
tests/: __init__.py  conftest.py  test_canvas.py  test_file_tree.py  test_registry.py  test_viewer_binary.py  test_viewer_csv.py  test_viewer_excel.py  test_viewer_image.py  test_viewer_json.py  test_viewer_markdown.py  test_viewer_npz.py  test_viewer_pdf.py  test_viewer_seg2.py  test_viewer_stack.py  test_viewer_text.py
viewers/: __init__.py  base.py  binary.py  csv_viewer.py  excel_viewer.py  image.py  json_viewer.py  markdown_viewer.py  npz.py  pdf.py  seg2.py  text.py
